--- a/src/components/article-card/article-card.styles.css
+++ b/src/components/article-card/article-card.styles.css
@@ -1,4 +1,18 @@
-.card-container{
+.card-container{	
     background-color: white;
-    width: 100px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: 20px 10px;
+	border-radius: 10px;
+    padding: 5px;
 }
+
+.link-container{
+    color: black;
+    text-decoration: none;
+}
+
+.data-container{
+    border: 1px solid grey;
+    border-radius: 10px;
+}
+
