--- a/src/components/page-card/page-card.styles.css
+++ b/src/components/page-card/page-card.styles.css
@@ -1,6 +1,9 @@
 .page-container{
     background-color: white;
     border-radius: 15px; 
-    width: 800px;
+    max-width: 1100px;
     margin: 20px auto;
+    padding: 25px 20px;
+    text-align: left;
+    justify-content: center;
 }
