--- a/src/components/article-card/article-card.styles.css
+++ b/src/components/article-card/article-card.styles.css
@@ -4,6 +4,7 @@
     margin: 20px 10px;
 	border-radius: 10px;
     padding: 5px;
+    cursor: pointer;
 }
 
 .link-container{
@@ -15,4 +16,11 @@
     border: 1px solid grey;
     border-radius: 10px;
 }
-
+.main-article-container{
+    text-align: left;
+	white-space: pre-wrap;       /* css-3 */
+ 	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ 	white-space: -pre-wrap;      /* Opera 4-6 */
+ 	white-space: -o-pre-wrap;    /* Opera 7 */
+     word-wrap: break-word;
+}
