--- a/src/pages/about-page/about-page.styles.css
+++ b/src/pages/about-page/about-page.styles.css
@@ -9,6 +9,11 @@
 }
 
 .about-page-images{
-    height: 100%;
+    width: 100%;
     object-fit: contain;
+}
+
+.text-container{
+    text-align: left;
+    padding: 10px 0px;
 }
