--- a/src/components/modal-edit-article/modal-edit-article.styles.css
+++ b/src/components/modal-edit-article/modal-edit-article.styles.css
@@ -1,4 +1,4 @@
-.modal-edit-container{
+.modal-container{
     background-color: rgba(255,255,255,0.8);
     position: fixed;
     height: 100%;
@@ -8,4 +8,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.article-edit-container{
+    width: 800px;
+    height: 80%;
+    background: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: 20px auto;
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+.input-container{
+    overflow-y: scroll;
 }
