--- a/src/components/modal-edit-article/modal-edit-article.styles.css
+++ b/src/components/modal-edit-article/modal-edit-article.styles.css
@@ -1,14 +1,3 @@
-.modal-container{
-    background-color: rgba(255,255,255,0.8);
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 .article-edit-container{
     width: 800px;
@@ -23,4 +12,10 @@
 }
 .input-container{
     overflow-y: scroll;
+}
+
+.save-button{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
 }
