--- a/src/components/modal-article/modal-article.styles.css
+++ b/src/components/modal-article/modal-article.styles.css
@@ -10,6 +10,7 @@
     justify-content: center;
     padding: 0px 10px;
 }
+
 .modal-article-layout{
     width: 800px;
     height: 80%;
@@ -22,7 +23,22 @@
     flex-direction: column;
     text-align: center;
 }
+
 .article-main-body{
     text-align: left;
     padding: 10px 15px;
+}
+
+.modal-close {
+    height: 40px;
+    display: flex;
+    align-items: flex-end;
+    font-size: 3rem;
+    font-style: bold;
+    cursor: pointer;
+}
+  
+.modal-close:hover {
+    color: grey;
+    cursor: pointer;
 }
