--- a/src/components/modal-article/modal-article.styles.css
+++ b/src/components/modal-article/modal-article.styles.css
@@ -27,6 +27,12 @@
 .article-main-body{
     text-align: left;
     padding: 10px 15px;
+    text-align: left;
+	white-space: pre-wrap;       /* css-3 */
+ 	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ 	white-space: -pre-wrap;      /* Opera 4-6 */
+ 	white-space: -o-pre-wrap;    /* Opera 7 */
+ 	word-wrap: break-word; 
 }
 
 .modal-close {
@@ -41,4 +47,8 @@
 .modal-close:hover {
     color: grey;
     cursor: pointer;
+}
+
+.article-scroll{
+    overflow-y: scroll;
 }
