--- a/src/components/modal-article/modal-article.styles.css
+++ b/src/components/modal-article/modal-article.styles.css
@@ -12,13 +12,14 @@
 }
 
 .modal-article-layout{
-    width: 800px;
-    height: 80%;
+    width: 700px;
+    height: 90%;
     background: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin: 20px auto;
     padding: 10px;
     border-radius: 10px;
+    border: 2px solid grey;
     display: flex;
     flex-direction: column;
     text-align: center;
