--- a/src/components/modal-edit-article/modal-edit-article.styles.css
+++ b/src/components/modal-edit-article/modal-edit-article.styles.css
@@ -1,7 +1,7 @@
 
 .article-edit-container{
-    width: 800px;
-    height: 80%;
+    width: 700px;
+    height: 90%;
     background: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin: 20px auto;
@@ -9,7 +9,10 @@
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    text-align: center;
+    border: 2px solid grey;
 }
+
 .input-container{
     overflow-y: scroll;
 }
@@ -18,4 +21,33 @@
     display: flex;
     justify-content: center;
     margin-bottom: 15px;
+    justify-content: space-evenly;
+}
+
+.modal-container{
+    background-color: rgba(255,255,255,0.8);
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-close {
+    position: absolute;
+    height: 40px;
+    display: flex;
+    align-items: flex-end;
+    font-size: 3rem;
+    font-style: bold;
+    cursor: pointer;
+
+}
+  
+.modal-close:hover {
+    color: grey;
+    cursor: pointer;
 }
