--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
 }
+.small-logo-container{
+  position: absolute;
+  top: 10px;
+  left: 30px;
+  z-index: 99;
+  cursor: pointer;
+}
