--- a/src/components/spinner/spinner.styles.css
+++ b/src/components/spinner/spinner.styles.css
@@ -1,14 +1,13 @@
-import styled from 'styled-components';
 
-export const SpinnerOverlay = styled.div`
+.SpinnerOverlay{
   height: 60vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-`;
+}
 
-export const SpinnerContainer = styled.div`
+.SpinnerContainer{
   display: inline-block;
   width: 50px;
   height: 50px;
@@ -17,21 +16,23 @@ export const SpinnerContainer = styled.div`
   border-top-color: #636767;
   -webkit-animation: spin 1s linear infinite;
   animation: spin 1s linear infinite;
+}
 
-  @keyframes spin {
+@keyframes spin {
     0% {
       transform: rotate(0deg);
     }
     100% {
       transform: rotate(360deg);
     }
-  }
-  @-webkit-keyframes spin {
+}
+
+@-webkit-keyframes spin {
     0% {
       -webkit-transform: rotate(0deg);
     }
     100% {
       -webkit-transform: rotate(360deg);
     }
-  }
-`;
+}
+
