--- a/src/components/map/map.styles.css
+++ b/src/components/map/map.styles.css
@@ -6,6 +6,12 @@
     width: 200px;
     background: white;
     opacity: 0.9;
-    border-radius: 10px;
     color: black;
+    height: 60px;
+    margin-top: 50px;
+    font-size: 18px;
+}
+
+.input-form-map{
+    background: white;
 }
