--- a/src/pages/landing-page/landing-page.styles.css
+++ b/src/pages/landing-page/landing-page.styles.css
@@ -1,4 +1,4 @@
-.landing-page-container{
+.landing-page-sections-container{
     width: 100vw;
     display: flex;
     justify-content: space-between;
@@ -11,9 +11,12 @@
     width: 500px;
     margin: 20px 40px;
 }
+.landing-page-container{
+    padding: 0px 15px;
+}
 
 @media screen and (max-width: 1000px) {
-    .landing-page-container{
+    .landing-page-sections-container{
         flex-direction: column;
         width: unset;
         align-items: center;
@@ -23,6 +26,6 @@
         width: 100vw;
     }
     .card-section{
-        width: 500px;
+        width: 70vw;
     }
 }
