adding some styling changes to debug appearance errors

--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -42,10 +42,28 @@
 	height: 5px;
 	background-color: #333;
 	margin: 6px 0;
+	transition: 0.4s;
 }
 
 .collapsed-navigation-container{
 	display: none;
+}
+
+/* Rotate first bar */
+.change1 {
+	-webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+	transform: rotate(-45deg) translate(-9px, 6px) ;
+}
+  
+/* Fade out the second bar */
+.change2 {
+	opacity: 0;
+}
+  
+/* Rotate last bar */
+.change3 {
+	-webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+	transform: rotate(45deg) translate(-8px, -8px) ;
 }
   
  
